# write-code-every-day

./: Cargo.toml  README.md
a-b-divide/: Cargo.toml  README.md
a-b-divide/src/: main.rs
bubble-sort/: Cargo.toml  README.md
bubble-sort/src/: main.rs
calculate-bmi/: Cargo.toml  README.md
calculate-bmi/src/: main.rs
century-from-year/: Cargo.toml  README.md
century-from-year/src/: main.rs
check-for-factor/: Cargo.toml  README.md
check-for-factor/src/: main.rs
circle/: Cargo.toml  README.md
circle-in-a-rectangle/: Cargo.toml  README.md
counting-sheeps/: Cargo.toml  README.md
dice_1/: Cargo.toml  README.md
even-or-odd/: Cargo.toml  README.md
even_or_odd/: Cargo.toml  README.md
greatest-common-divisor/: Cargo.toml  README.md
hello-world/: README.md
hello_world/: README.md
how-many-divisors/: Cargo.toml  README.md
insert-sort/: Cargo.toml  README.md
maximum-profit/: Cargo.toml  README.md
min-max-sum/: Cargo.toml  README.md
prime-numbers/: Cargo.toml  README.md
print-chessboard/: Cargo.toml  README.md
print-frame/: Cargo.toml  README.md
print-many-hello-world/: Cargo.toml  README.md
print-rectangle/: Cargo.toml  README.md
print-test-case/: Cargo.toml  README.md
qq/: Cargo.toml  README.md
range/: Cargo.toml  README.md
rectangle/: Cargo.toml  README.md
remove-first-and-last-character/: Cargo.toml  README.md
remove-string-spaces/: Cargo.toml  README.md
reversed-numbers/: Cargo.toml  README.md
reversed-strings/: Cargo.toml  README.md
running_sum_of_1d_array/: README.md
selection-sort/: Cargo.toml  README.md
simple-calculator/: Cargo.toml  README.md
small-large-equal/: Cargo.toml  README.md
smallest/: Cargo.toml  README.md
sorting-numbers/: Cargo.toml  README.md
square-n-sum/: Cargo.toml  README.md
string-repeat/: Cargo.toml  README.md
sum-of-positive/: Cargo.toml  README.md
summation/: Cargo.toml  README.md
swapping-two-numbers/: Cargo.toml  README.md
two-word-name/: Cargo.toml  README.md
vowel-count/: Cargo.toml  README.md
watch/: Cargo.toml  README.md
x-cubic/: Cargo.toml  README.md
x-power/: Cargo.toml  README.md
x_power/: Cargo.toml  README.md
(+41 files in other folders)
