[workspace]

members = [
  "hello-world",
  "x-cubic",
  "rectangle",
  "even-or-odd",
  "watch",
  "sum-of-positive",
  "remove-first-and-last-character",
  "string-repeat",
  "small-large-equal",
  "reversed-strings",
  "summation",
  "smallest",
  "range",
  "remove-string-spaces",
  "square-n-sum",
  "sorting-numbers",
  "counting-sheeps",
  "circle-in-a-rectangle",
  "print-many-hello-world",
  "calculate-bmi",
  "two-word-name",
]