[workspace]

members = [
  "hello-world",
  "x-cubic",
  "rectangle",
  "even-or-odd",
  "watch",
  "sum-of-positive",
  "remove-first-and-last-character",
  "string-repeat",
  "small-large-equal",
  "reversed-strings",
  "summation",
  "smallest",
  "range",
  "remove-string-spaces",
  "square-n-sum",
  "sorting-numbers",
  "counting-sheeps",
  "circle-in-a-rectangle",
  "print-many-hello-world",
  "calculate-bmi",
  "two-word-name",
  "print-test-case",
  "vowel-count",
  "swapping-two-numbers",
  "century-from-year",
  "check-for-factor",
  "how-many-divisors",
  "a-b-divide",
  "circle",
  "simple-calculator",
  "min-max-sum",
  "print-rectangle",
  "print-frame",
  "print-chessboard",
  "reversed-numbers",
]